<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/page0"
            android:icon="@drawable/ic_menu_icon"
            android:title="@string/weather" />
        <item
            android:id="@+id/page1"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/meteorology" />
        <item
            android:id="@+id/page2"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/causes" />
        <item
            android:id="@+id/page3"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/forecast" />
    </group>

    <item android:title="@string/read">
        <menu>
            <item
                android:id="@+id/nav_viewNow"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/now" />
            <item
                android:id="@+id/nav_viewToday"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/today" />
            <item
                android:id="@+id/nav_viewTomorrow"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/tomorrow" />
            <item
                android:id="@+id/nav_viewThreeDays"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/three_days" />
            <item
                android:id="@+id/nav_viewWeekly"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/weekly" />
            <item
                android:id="@+id/nav_viewTwoWeeks"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/two_weeks" />
            <item
                android:id="@+id/nav_viewMonthly"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/monthly" />
        </menu>

    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_review"
                android:title="@string/send_mail" />
        </menu>
    </item>

</menu>
